--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pandas = "==0.25.0"
 altair = "==2.3.0"
 vega = "==1.4.0"
 jupyter = "*"
+beautifulsoup4 = "==4.8.2"
 
 [requires]
 python_version = "3.7"
